# Notos

./: .gitignore  Cargo.toml  README.md  build.rs
notos_sdk/: Cargo.toml
notos_sdk/src/: lib.rs
plugins/notos_plugin_about/: Cargo.toml
plugins/notos_plugin_about/src/: lib.rs
plugins/notos_plugin_base64/: Cargo.toml
plugins/notos_plugin_base64/src/: lib.rs
plugins/notos_plugin_case_transformer/: Cargo.toml
plugins/notos_plugin_case_transformer/src/: lib.rs
plugins/notos_plugin_datetime/: Cargo.toml
plugins/notos_plugin_datetime/src/: lib.rs
plugins/notos_plugin_hex_viewer/: Cargo.toml
plugins/notos_plugin_hex_viewer/src/: lib.rs
plugins/notos_plugin_json_format/: Cargo.toml
plugins/notos_plugin_json_format/src/: lib.rs
plugins/notos_plugin_markdown_preview/: Cargo.toml
plugins/notos_plugin_markdown_preview/src/: lib.rs
plugins/notos_plugin_url_detector/: Cargo.toml
plugins/notos_plugin_url_detector/src/: lib.rs
plugins/notos_plugin_web_tools/: Cargo.toml
plugins/notos_plugin_web_tools/src/: lib.rs
src/: app.rs  dialogs.rs  editor.rs  main.rs  plugin.rs  ui.rs  undo_manager.rs  utils.rs
src/app/: actions.rs  editor_panel.rs  file_ops.rs  session.rs  style.rs  update.rs
src/plugins/: stats.rs
src/ui/: menu.rs  status_bar.rs  tabs.rs
