[package]
name = "rust-notos"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["notos_sdk", "plugins/notos_plugin_about", "plugins/notos_plugin_json_format", "plugins/notos_plugin_base64"]

[dependencies]
notos_sdk = { path = "./notos_sdk" }
libloading = "0.8"
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
directories = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
encoding_rs = "0.8.35"
image = "0.25.9"
arboard = "3.6.1"

[build-dependencies]
winres = "0.1.12"
