[package]
name = "rust-notos"
version = "0.2.4"
edition = "2021"

[workspace]
members = ["notos_sdk", "plugins/notos_plugin_about", "plugins/notos_plugin_json_format", "plugins/notos_plugin_base64"]

[dependencies]
notos_sdk = { path = "./notos_sdk" }
libloading = "0.8"
eframe = { version = "0.29.1", default-features = false, features = ["glow"] }
egui = { version = "0.29.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] } # On windows this doesn't matter much but good practice
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
arboard = { version = "3.6.1", default-features = false }

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
