[package]
name = "rust-notos"
version.workspace = true
edition.workspace = true

[workspace]
package = { version = "0.3.2", edition = "2021" }
members = ["notos_sdk", "plugins/notos_plugin_about", "plugins/notos_plugin_json_format", "plugins/notos_plugin_base64", "plugins/notos_plugin_url_detector", "plugins/notos_plugin_hex_viewer"]

[workspace.dependencies]
egui = { version = "0.29.1", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dependencies]
notos_sdk = { path = "./notos_sdk" }
libloading = "0.8"
eframe = { version = "0.29.1", default-features = false, features = ["glow"] }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] } # On windows this doesn't matter much but good practice
log = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
arboard = { version = "3.6.1", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
encoding_rs = "0.8"
flate2 = "1.0"
base64 = { workspace = true }

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
