[package]
name = "notos_plugin_base64"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
notos_sdk = { path = "../../notos_sdk" }
egui = { version = "0.29.1", default-features = false }
eframe = { version = "0.29.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
log = "0.4"
