[package]
name = "notos_plugin_json_format"
version = "0.2.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
notos_sdk = { path = "../../notos_sdk" }
egui = { version = "0.29.1", default-features = false }
eframe = { version = "0.29.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
