[package]
name = "notos_plugin_url_detector"
version.workspace = true
edition.workspace = true
description = "A plugin that detects URLs and opens them with the default browser when Ctrl+Click is pressed."

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = { workspace = true }
notos_sdk = { path = "../../notos_sdk" }
log = { workspace = true }

